fix typing animation on mobile

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -71,6 +71,11 @@
 		width: 5px;
 	}
 
+	.c-typed-text__wrapper {
+		min-height: 132px;
+		display: inline-block;
+	}
+
 	.c-header {
 		margin-top: 11px;
 	}
